updated to 1.20.2